Italy Updated firenze pages.

--- a/trip/italy/firenze.htm
+++ b/trip/italy/firenze.htm
@@ -51,6 +51,165 @@
 <p>
 行程表：<br>
 <img src="firenze/1.jpg" class="maxSize"><br><br>
+
+佛羅倫斯是一個相當漂亮的地方，住在這裡的幾天，心情感覺很放鬆，悠閒的在路上行走也是一種享受，這裡的美術館建議都進去逛逛，真的相當值得，除了可以上廁所之外，也可以觀賞到大師的厲害作品，交通方面，大客車沒有進入市區，所以走在路上不會特別擁擠，建議在佛羅倫斯可以多住幾天～<br><br>
+
+第一天到佛羅倫斯就直奔聖母百花聖殿，相當漂亮的教堂～<br>
+<img src="firenze/2.jpg" class="maxSize"><br><br>
+
+天堂之門<br>
+<img src="firenze/44.jpg" class="maxSize"><br><br>
+
+新聖母大殿<br>
+<img src="firenze/3.jpg" class="maxSize"><br><br>
+
+SMN百年修道院，裡面有賣香皂～<br>
+<img src="firenze/4.jpg" class="maxSize"><br>
+<img src="firenze/5.jpg" class="maxSize"><br>
+<img src="firenze/6.jpg" class="maxSize"><br><br>
+
+美第奇小聖堂<br>
+<img src="firenze/7.jpg" class="maxSize"><br><br>
+
+美第奇家族的墓<br>
+<img src="firenze/8.jpg" class="maxSize"><br><br>
+
+佛羅倫斯市徽<br>
+<img src="firenze/9.jpg" class="maxSize"><br><br>
+
+美第奇家徽<br>
+<img src="firenze/10.jpg" class="maxSize"><br><br>
+
+領主廣場<br>
+<img src="firenze/11.jpg" class="maxSize"><br>
+<img src="firenze/12.jpg" class="maxSize"><br>
+<img src="firenze/13.jpg" class="maxSize"><br>
+<img src="firenze/14.jpg" class="maxSize"><br><br>
+
+野豬噴泉，老婆說摸鼻子可以帶來好運～<br>
+<img src="firenze/15.jpg" class="maxSize"><br><br>
+
+大衛像<br>
+<img src="firenze/16.jpg" class="maxSize"><br><br>
+
+Gucci Garden，這蠟像很逼真，確實有被嚇到，因為廁所間裡面還有蠟像坐在裡面～<br>
+<img src="firenze/17.jpg" class="maxSize"><br><br>
+
+共和廣場，Apple Store在左前方<br>
+<img src="firenze/18.jpg" class="maxSize"><br><br>
+
+開始爬聖母百花聖殿～<br>
+<img src="firenze/19.jpg" class="maxSize"><br><br>
+
+這視野真是無敵～<br>
+<img src="firenze/20.jpg" class="maxSize"><br>
+<img src="firenze/21.jpg" class="maxSize"><br><br>
+
+登頂大約要爬30層樓高，不過這欄杆相當低，拍照真的要小心一點～<br>
+<img src="firenze/22.jpg" class="maxSize"><br><br>
+
+隔壁就是接著要爬的鐘樓，大約28層樓高～<br>
+<img src="firenze/23.jpg" class="maxSize"><br><br>
+
+鐘樓上的視野都被鐵絲圍住，視野確實差蠻多的～<br>
+<img src="firenze/24.jpg" class="maxSize"><br><br>
+
+主教座堂<br>
+<img src="firenze/25.jpg" class="maxSize"><br><br>
+
+舊宮<br>
+<img src="firenze/26.jpg" class="maxSize"><br><br>
+
+老橋<br>
+<img src="firenze/27.jpg" class="maxSize"><br><br>
+
+悠閒的走在橋邊，真是舒服～<br>
+<img src="firenze/28.jpg" class="maxSize"><br><br>
+
+聖三一橋<br>
+<img src="firenze/29.jpg" class="maxSize"><br><br>
+
+烏菲茲廣場<br>
+<img src="firenze/30.jpg" class="maxSize"><br><br>
+
+烏菲茲美術館<br>
+<img src="firenze/31.jpg" class="maxSize"><br>
+<img src="firenze/32.jpg" class="maxSize"><br>
+<img src="firenze/33.jpg" class="maxSize"><br>
+<img src="firenze/34.jpg" class="maxSize"><br>
+<img src="firenze/38.jpg" class="maxSize"><br>
+<img src="firenze/39.jpg" class="maxSize"><br>
+<img src="firenze/40.jpg" class="maxSize"><br>
+<img src="firenze/42.jpg" class="maxSize"><br>
+<img src="firenze/35.jpg" class="maxSize"><br><br>
+
+樓上有餐廳，坐在窗邊喝著咖啡，吃著鮪魚三明治，順便看看窗外的美景，享受著悠閒的生活～<br>
+<img src="firenze/41.jpg" class="maxSize"><br><br>
+
+美第奇里卡迪宮<br>
+<img src="firenze/36.jpg" class="maxSize"><br><br>
+
+美第奇花園<br>
+<img src="firenze/37.jpg" class="maxSize"><br><br>
+
+聖母領報廣場<br>
+<img src="firenze/43.jpg" class="maxSize"><br><br>
+
+帕拉提納美術館<br>
+<img src="firenze/45.jpg" class="maxSize"><br><br>
+
+畫得很漂亮～<br>
+<img src="firenze/48.jpg" class="maxSize"><br><br>
+
+太可愛了～<br>
+<img src="firenze/49.jpg" class="maxSize"><br>
+<img src="firenze/50.jpg" class="maxSize"><br><br>
+
+彼提宮<br>
+<img src="firenze/51.jpg" class="maxSize"><br>
+<img src="firenze/52.jpg" class="maxSize"><br><br>
+
+聖十字聖殿<br>
+<img src="firenze/56.jpg" class="maxSize"><br><br>
+
+街頭轉角處<br>
+<img src="firenze/46.jpg" class="maxSize"><br><br>
+
+佛羅倫斯常看到這種單人的小車<br>
+<img src="firenze/47.jpg" class="maxSize"><br><br>
+
+米開郎基羅廣場，需要爬一點點小山，不過視野還算是不錯～<br>
+<img src="firenze/53.jpg" class="maxSize"><br><br>
+
+搭幾站的火車就可以到比薩斜塔<br>
+<img src="firenze/54.jpg" class="maxSize"><br><br>
+
+近看就沒有那麼斜<br>
+<img src="firenze/55.jpg" class="maxSize"><br><br>
+
+因為在佛羅倫斯的行程已經走完，所以查了下資料，發現可以搭火車到Poggibonsi車站，再搭客運去聖吉米納諾，不過，發現假日的客運班次真的少很多，因此，建議假日還是待在市區比較保險，如果要去，最好先查一下時刻表，而購買的火車票是有包含客運費用(去程)，因此，到Poggibonsi車站就可以不用買去程的客運車票，客運站牌旁邊有售票機器，建議先買客運的回程車票(也可以車上付錢給司機)，不過，使用那台販賣機器真的需要有足夠的耐心～<br>
+<img src="firenze/57.jpg" class="maxSize"><br><br>
+
+Poggibonsi車站<br>
+<img src="firenze/58.jpg" class="maxSize"><br><br>
+
+到Poggibonsi車站已經是中午12點，發現附近只有這家餐廳，很多當地人在裡面用餐，東西蠻好吃的～<br>
+<img src="firenze/59.jpg" class="maxSize"><br><br>
+
+聖吉米納諾，相當漂亮的地方～<br>
+<img src="firenze/60.jpg" class="maxSize"><br>
+<img src="firenze/61.jpg" class="maxSize"><br>
+<img src="firenze/62.jpg" class="maxSize"><br>
+<img src="firenze/63.jpg" class="maxSize"><br>
+<img src="firenze/64.jpg" class="maxSize"><br>
+<img src="firenze/65.jpg" class="maxSize"><br>
+<img src="firenze/66.jpg" class="maxSize"><br><br>
+
+回程的車是在這邊搭的～<br>
+<img src="firenze/67.jpg" class="maxSize"><br><br>
+
+夜晚的聖母百花聖殿，果然是翡冷翠～<br>
+<img src="firenze/68.jpg" class="maxSize">
 </p>
 
 <p>
