Italy Updated venezia page.

--- a/trip/italy/venezia.htm
+++ b/trip/italy/venezia.htm
@@ -51,6 +51,116 @@
 <p>
 行程表：<br>
 <img src="venezia/1.jpg" class="maxSize"><br><br>
+
+Itaro車廂座位是對半分，車廂中，有一半的座位是順向坐，另一半是逆向坐，而座位(24、25號)就剛好是位於中間，也就是面對面的座椅，所以如果是需要四人座位，這是一個不錯的選擇～<br>
+<img src="venezia/2.jpg" class="maxSize"><br><br>
+
+往窗外看，感覺鐵路是架在水上行走～<br>
+<img src="venezia/3.jpg" class="maxSize"><br><br>
+
+漂亮的水都～<br>
+<img src="venezia/4.jpg" class="maxSize"><br>
+<img src="venezia/5.jpg" class="maxSize"><br><br>
+
+這邊的路幾乎都是小巷子，而且有蠻多是死巷，建議開Google地圖導航～<br>
+<img src="venezia/6.jpg" class="maxSize"><br><br>
+
+漂亮的小河～<br>
+<img src="venezia/7.jpg" class="maxSize"><br>
+<img src="venezia/8.jpg" class="maxSize"><br>
+<img src="venezia/10.jpg" class="maxSize"><br><br>
+
+哥爾多尼府<br>
+<img src="venezia/9.jpg" class="maxSize"><br><br>
+
+走在路上，旁邊就是小河，感覺還不錯～<br>
+<img src="venezia/11.jpg" class="maxSize"><br><br>
+
+沿路經過的景點<br>
+<img src="venezia/12.jpg" class="maxSize"><br>
+<img src="venezia/13.jpg" class="maxSize"><br>
+<img src="venezia/14.jpg" class="maxSize"><br>
+<img src="venezia/15.jpg" class="maxSize"><br><br>
+
+威尼斯鳳凰劇院<br>
+<img src="venezia/16.jpg" class="maxSize"><br><br>
+
+沿路經過的景點<br>
+<img src="venezia/17.jpg" class="maxSize"><br>
+<img src="venezia/18.jpg" class="maxSize"><br>
+<img src="venezia/19.jpg" class="maxSize"><br><br>
+
+蝸牛府<br>
+<img src="venezia/20.jpg" class="maxSize"><br><br>
+
+聖馬爾谷聖殿宗主教座堂<br>
+<img src="venezia/21.jpg" class="maxSize"><br><br>
+
+聖馬可廣場，邊走路邊吃東西，記得注意一下海鷗～<br>
+<img src="venezia/22.jpg" class="maxSize"><br>
+<img src="venezia/23.jpg" class="maxSize"><br><br>
+
+可惜鐘樓正在整修，無法登頂～<br>
+<img src="venezia/24.jpg" class="maxSize"><br>
+<img src="venezia/25.jpg" class="maxSize"><br><br>
+
+總督宮<br>
+<img src="venezia/26.jpg" class="maxSize"><br>
+<img src="venezia/27.jpg" class="maxSize"><br>
+<img src="venezia/43.jpg" class="maxSize"><br><br>
+
+Gondole，搭乘費用為80歐元，晚上更貴～<br>
+<img src="venezia/28.jpg" class="maxSize"><br><br>
+
+沿路經過的景點<br>
+<img src="venezia/29.jpg" class="maxSize"><br>
+<img src="venezia/30.jpg" class="maxSize"><br>
+<img src="venezia/31.jpg" class="maxSize"><br>
+<img src="venezia/34.jpg" class="maxSize"><br><br>
+
+里阿爾托橋<br>
+<img src="venezia/33.jpg" class="maxSize"><br><br>
+
+赤足橋<br>
+<img src="venezia/38.jpg" class="maxSize"><br><br>
+
+夜晚的赤足橋<br>
+<img src="venezia/35.jpg" class="maxSize"><br><br>
+
+夜晚的街道<br>
+<img src="venezia/36.jpg" class="maxSize"><br><br>
+
+美好的早晨～<br>
+<img src="venezia/39.jpg" class="maxSize"><br>
+<img src="venezia/40.jpg" class="maxSize"><br><br>
+
+嘆息橋，聽說是犯人在經過這一道橋時，看到外面陽光，發出的嘆息～<br>
+<img src="venezia/41.jpg" class="maxSize"><br><br>
+
+每天都需要的運補作業～<br>
+<img src="venezia/42.jpg" class="maxSize"><br><br>
+
+聽說以前有淹過大水<br>
+<img src="venezia/44.jpg" class="maxSize"><br><br>
+
+附近有蠻多小島，都可以搭船過去<br>
+<img src="venezia/45.jpg" class="maxSize"><br><br>
+
+經過的景點～<br>
+<img src="venezia/46.jpg" class="maxSize"><br>
+<img src="venezia/47.jpg" class="maxSize"><br><br>
+
+皇家花園<br>
+<img src="venezia/48.jpg" class="maxSize"><br><br>
+
+學院橋<br>
+<img src="venezia/49.jpg" class="maxSize"><br><br>
+
+莫契尼哥宮博物館<br>
+<img src="venezia/32.jpg" class="maxSize"><br><br>
+
+佩薩羅宮<br>
+<img src="venezia/37.jpg" class="maxSize">
 </p>
 
 <p>
