--- a/trip/italy/milano.htm
+++ b/trip/italy/milano.htm
@@ -51,6 +51,58 @@
 <p>
 行程表：<br>
 <img src="milano/1.jpg" class="maxSize"><br><br>
+
+飯店剛好位於車站旁～<br>
+<img src="milano/2.jpg" class="maxSize"><br><br>
+
+叮叮車？<br>
+<img src="milano/3.jpg" class="maxSize"><br><br>
+
+沿路經過的景點<br>
+<img src="milano/4.jpg" class="maxSize"><br>
+<img src="milano/5.jpg" class="maxSize"><br>
+<img src="milano/6.jpg" class="maxSize"><br>
+<img src="milano/7.jpg" class="maxSize"><br><br>
+
+艾曼紐二世拱廊<br>
+<img src="milano/8.jpg" class="maxSize"><br>
+<img src="milano/9.jpg" class="maxSize"><br><br>
+
+米蘭大教堂，相當漂亮的教堂～<br>
+<img src="milano/10.jpg" class="maxSize"><br><br>
+
+沿路經過的景點<br>
+<img src="milano/11.jpg" class="maxSize"><br>
+<img src="milano/12.jpg" class="maxSize"><br><br>
+
+森皮奧內公園<br>
+<img src="milano/13.jpg" class="maxSize"><br>
+<img src="milano/14.jpg" class="maxSize"><br>
+<img src="milano/16.jpg" class="maxSize"><br><br>
+
+和平之門<br>
+<img src="milano/15.jpg" class="maxSize"><br><br>
+
+沿路經過的景點<br>
+<img src="milano/17.jpg" class="maxSize"><br>
+<img src="milano/18.jpg" class="maxSize"><br>
+<img src="milano/19.jpg" class="maxSize"><br><br>
+
+米蘭大教堂登頂，直接搭電梯～<br>
+<img src="milano/20.jpg" class="maxSize"><br>
+<img src="milano/21.jpg" class="maxSize"><br>
+<img src="milano/22.jpg" class="maxSize"><br>
+<img src="milano/23.jpg" class="maxSize"><br><br>
+
+下樓後，就可以直接進入米蘭大教堂<br>
+<img src="milano/24.jpg" class="maxSize"><br>
+<img src="milano/25.jpg" class="maxSize"><br>
+<img src="milano/26.jpg" class="maxSize"><br><br>
+
+沿路經過的景點<br>
+<img src="milano/27.jpg" class="maxSize"><br>
+<img src="milano/28.jpg" class="maxSize"><br>
+<img src="milano/29.jpg" class="maxSize">
 </p>
 
 <p>
