Italy Updated milano page.

--- a/trip/italy/milano.htm
+++ b/trip/italy/milano.htm
@@ -91,6 +91,7 @@
 米蘭大教堂登頂，直接搭電梯～<br>
 <img src="milano/20.jpg" class="maxSize"><br>
 <img src="milano/21.jpg" class="maxSize"><br>
+<img src="milano/30.jpg" class="maxSize"><br>
 <img src="milano/22.jpg" class="maxSize"><br>
 <img src="milano/23.jpg" class="maxSize"><br><br>
 
@@ -102,7 +103,13 @@
 沿路經過的景點<br>
 <img src="milano/27.jpg" class="maxSize"><br>
 <img src="milano/28.jpg" class="maxSize"><br>
-<img src="milano/29.jpg" class="maxSize">
+<img src="milano/29.jpg" class="maxSize"><br><br>
+
+感恩聖母堂<br>
+<img src="milano/31.jpg" class="maxSize"><br>
+<img src="milano/32.jpg" class="maxSize"><br>
+<img src="milano/33.jpg" class="maxSize"><br>
+<img src="milano/34.jpg" class="maxSize">
 </p>
 
 <p>
