Wine How to use common dialog(ChooseFont).

--- a/program.htm
+++ b/program.htm
@@ -548,6 +548,10 @@ Wine</h3>
           <a href="program/wine/cpp_dlg_replacetext.htm">
           ReplaceText</a><br>
         
+          &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+          <a href="program/wine/cpp_dlg_choosefont.htm">
+          ChooseFont</a><br>
+        
       &emsp;&emsp;&oplus;
       Single Document Interface (SDI)<br>
 
