PinePhone Keyboard case for PinePhone.

--- a/phone.htm
+++ b/phone.htm
@@ -2282,6 +2282,10 @@ PINE64 PinePhone</h3>
 介紹</a><br>
 
 &lowast;
+<a href="phone/pinephone/keyboard.htm">
+鍵盤底座</a><br>
+
+&lowast;
 <a href="phone/pinephone/pogo.htm">
 Pogo pins</a><br>
 
