PinePhone Added more images for comparison.

--- a/phone/pinephone/keyboard.htm
+++ b/phone/pinephone/keyboard.htm
@@ -85,7 +85,19 @@ P.S. <b>裝入鍵盤座後，不可以將USB充電線插到PinePhone，否則會
 <img src="keyboard/9.jpg" class="maxSize"><br><br>
 
 展開後<br>
-<img src="keyboard/10.jpg" class="maxSize">
+<img src="keyboard/10.jpg" class="maxSize"><br><br>
+
+GPD Win和PinePhone<br>
+<img src="keyboard/11.jpg" class="maxSize"><br><br>
+
+GPD Win2和PinePhone<br>
+<img src="keyboard/12.jpg" class="maxSize"><br><br>
+
+GPD MicroPC和PinePhone<br>
+<img src="keyboard/13.jpg" class="maxSize"><br><br>
+
+F(x)tec Pro1 X和PinePhone<br>
+<img src="keyboard/14.jpg" class="maxSize">
 </p>
 
 <p>
