--- a/phone.htm
+++ b/phone.htm
@@ -2296,6 +2296,13 @@ UART pins</a><br>
 &lowast;
 <a href="phone/pinephone/flashmode.htm">
 如何進入flashing mode</a><br>
+
+&oplus;
+<b>Arch Linux ARM</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="phone/pinephone/arch_install.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 </p>
