PinePhone How to install Fedora.

--- a/phone.htm
+++ b/phone.htm
@@ -2303,6 +2303,13 @@ UART pins</a><br>
   &emsp;&emsp;&lowast;
   <a href="phone/pinephone/arch_install.htm">
   安裝系統</a><br>
+
+&oplus;
+<b>Fedora</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="phone/pinephone/fedora_install.htm">
+  安裝系統</a><br>
 <br><br><br><br>
 
 </p>
