PinePhone How to install tow-boot into emmc.

--- a/phone.htm
+++ b/phone.htm
@@ -2294,21 +2294,23 @@ Pogo pins</a><br>
 UART pins</a><br>
 
 &lowast;
+<a href="phone/pinephone/towboot.htm">
+安裝Tow-boot</a><br>
+
+&lowast;
 <a href="phone/pinephone/flashmode.htm">
 如何進入flashing mode</a><br>
 
 &oplus;
-<b>Arch Linux ARM</b><br>
-
+<b>Fedora</b><br>
   &emsp;&emsp;&lowast;
-  <a href="phone/pinephone/arch_install.htm">
+  <a href="phone/pinephone/fedora_install.htm">
   安裝系統</a><br>
 
 &oplus;
-<b>Fedora</b><br>
-
+<b>Arch Linux ARM</b><br>
   &emsp;&emsp;&lowast;
-  <a href="phone/pinephone/fedora_install.htm">
+  <a href="phone/pinephone/arch_install.htm">
   安裝系統</a><br>
 <br><br><br><br>
 
