PinePhone How to install LuneOS.

--- a/phone.htm
+++ b/phone.htm
@@ -2308,6 +2308,12 @@ UART pins</a><br>
   安裝系統</a><br>
 
 &oplus;
+<b>LuneOS</b><br>
+  &emsp;&emsp;&lowast;
+  <a href="phone/pinephone/luneos_install.htm">
+  安裝系統</a><br>
+
+&oplus;
 <b>Kali Linux</b><br>
   &emsp;&emsp;&lowast;
   <a href="phone/pinephone/kali_install.htm">
