--- a/phone/pinephone/luneos_install.htm
+++ b/phone/pinephone/luneos_install.htm
@@ -54,6 +54,8 @@
 2. <a href="https://wiki.pine64.org/wiki/PinePhone_Software_Releases">releases</a><br><br>
 
 步驟如下：<br>
+1. 安裝Tow-Boot<br>
+2. 執行如下命令：
 </p>
 <pre>
 $ cd
