PinePhone How to install Maemo Leste.

--- a/phone.htm
+++ b/phone.htm
@@ -2320,6 +2320,12 @@ UART pins</a><br>
   安裝系統</a><br>
 
 &oplus;
+<b>Maemo Leste</b><br>
+  &emsp;&emsp;&lowast;
+  <a href="phone/pinephone/maemo_install.htm">
+  安裝系統</a><br>
+
+&oplus;
 <b>Arch Linux ARM</b><br>
   &emsp;&emsp;&lowast;
   <a href="phone/pinephone/arch_install.htm">
