PinePhone How to install Mobian.

--- a/phone.htm
+++ b/phone.htm
@@ -2314,6 +2314,12 @@ UART pins</a><br>
   安裝系統</a><br>
 
 &oplus;
+<b>Mobian</b><br>
+  &emsp;&emsp;&lowast;
+  <a href="phone/pinephone/mobian_install.htm">
+  安裝系統</a><br>
+
+&oplus;
 <b>Kali Linux</b><br>
   &emsp;&emsp;&lowast;
   <a href="phone/pinephone/kali_install.htm">
