--- a/phone.htm
+++ b/phone.htm
@@ -2338,6 +2338,12 @@ UART pins</a><br>
   安裝系統</a><br>
 
 &oplus;
+<b>postmarketOS</b><br>
+  &emsp;&emsp;&lowast;
+  <a href="phone/pinephone/postmarketos_install.htm">
+  安裝系統</a><br>
+
+&oplus;
 <b>Arch Linux ARM</b><br>
   &emsp;&emsp;&lowast;
   <a href="phone/pinephone/arch_install.htm">
