PinePhone How to install Sailfish OS.

--- a/phone.htm
+++ b/phone.htm
@@ -2332,6 +2332,12 @@ UART pins</a><br>
   安裝系統</a><br>
 
 &oplus;
+<b>Sailfish OS</b><br>
+  &emsp;&emsp;&lowast;
+  <a href="phone/pinephone/sailfishos_install.htm">
+  安裝系統</a><br>
+
+&oplus;
 <b>Manjaro ARM</b><br>
   &emsp;&emsp;&lowast;
   <a href="phone/pinephone/manjaro_install.htm">
