PinePhone How to install Ubuntu Touch.

--- a/phone.htm
+++ b/phone.htm
@@ -2344,6 +2344,12 @@ UART pins</a><br>
   安裝系統</a><br>
 
 &oplus;
+<b>Ubuntu Touch</b><br>
+  &emsp;&emsp;&lowast;
+  <a href="phone/pinephone/ubuntu_install.htm">
+  安裝系統</a><br>
+
+&oplus;
 <b>postmarketOS</b><br>
   &emsp;&emsp;&lowast;
   <a href="phone/pinephone/postmarketos_install.htm">
