Wine How to use common dialog(PageSetupDlg).

--- a/program.htm
+++ b/program.htm
@@ -560,6 +560,10 @@ Wine</h3>
           <a href="program/wine/cpp_dlg_savefile.htm">
           SaveFile</a><br>
         
+          &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+          <a href="program/wine/cpp_dlg_pagesetup.htm">
+          PageSetup</a><br>
+        
       &emsp;&emsp;&oplus;
       Single Document Interface (SDI)<br>
 
