Wine How to use controls(Button).

--- a/program.htm
+++ b/program.htm
@@ -534,6 +534,13 @@ Wine</h3>
           RCDATA</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&oplus;
+        Controls<br>
+
+          &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+          <a href="program/wine/cpp_dlg_button.htm">
+          Button</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&oplus;
         Common Dialog<br>
 
           &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
