PinePhone How to build Tow-Boot.

--- a/phone.htm
+++ b/phone.htm
@@ -2295,7 +2295,11 @@ UART pins</a><br>
 
 &lowast;
 <a href="phone/pinephone/towboot.htm">
-安裝Tow-boot</a><br>
+安裝tow-boot</a><br>
+
+&lowast;
+<a href="phone/pinephone/build_towboot.htm">
+build tow-boot</a><br>
 
 &lowast;
 <a href="phone/pinephone/flashmode.htm">
