--- a/phone/pinephone/build_towboot.htm
+++ b/phone/pinephone/build_towboot.htm
@@ -46,37 +46,29 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>PINE64 PinePhone</h3>
-<p><b>安裝tow-boot</b></p>
+<p><b>build tow-boot</b></p>
 <hr size="1">
 <p>
 參考資料：<br>
 1. <a href="https://wiki.pine64.org/index.php/PinePhone">wiki</a><br>
 2. <a href="https://github.com/Tow-Boot/Tow-Boot/releases">tow-boot</a><br>
-3. <a href="https://ivonblog.com/posts/pinephone-tow-boot/">pinephone-tow-boot</a><br><br>
+3. <a href="https://nixos.wiki/wiki/Nix_Installation_Guide">Nix_Installation_Guide</a><br><br>
 
 如下：<br>
 </p>
 <pre>
 $ cd
-$ wget https://github.com/Tow-Boot/Tow-Boot/releases/download/release-2021.10-005/pine64-pinephoneA64-2021.10-005.tar.xz
-$ xz -d pine64-pinephoneA64-2021.10-005.tar.xz
-$ tar xvf pine64-pinephoneA64-2021.10-005.tar
-$ sudo dd if=pine64-pinephoneA64-2021.10-005/mmcboot.installer.img of=/dev/sdX bs=1M
-$ sync
-</pre><br>
+$ curl -L https://nixos.org/nix/install | sh
+$ source $HOME/.nix-profile/etc/profile.d/nix.sh
 
+$ git clone https://github.com/Tow-Boot/Tow-Boot
+$ cd Tow-Boot
+$ nix-build -A pine64-pinephoneA64
+$ ls result
+    binaries  config  mmcboot.installer.img  shared.disk-image.img  source
+</pre>
 <p>
-Install Tow-Boot to eMMC Boot<br>
-<img src="towboot/1.jpg" class="maxSize"><br><br>
-
-Start installation<br>
-<img src="towboot/2.jpg" class="maxSize"><br><br>
-
-安裝中...<br>
-<img src="towboot/3.jpg" class="maxSize"><br><br>
-
-完成<br>
-<img src="towboot/4.jpg" class="maxSize">
+P.S. 需要下載NixOS(10GB)後，才會開始編譯Tow-Boot
 </p>
 
 <p>
