--- a/phone/pinephone/towboot.htm
+++ b/phone/pinephone/towboot.htm
@@ -54,6 +54,8 @@
 2. <a href="https://github.com/Tow-Boot/Tow-Boot/releases">tow-boot</a><br>
 3. <a href="https://ivonblog.com/posts/pinephone-tow-boot/">pinephone-tow-boot</a><br><br>
 
+安裝Tow-Boot到eMMC後，只要按住<b>上音量鍵</b>開機，Tow-Boot就會將eMMC透過USB掛載成一個DISK(如：/dev/sdb)，接著，使用者就可以透過dd指令將系統燒錄到eMMC(不會覆蓋掉Tow-Boot本身)，Tow-Boot本身就是一個Bootloader，因此，也可以用來引導MicroSD系統開機，像Mobian系統就必須先安裝Tow-Boot才可以開機使用。<br><br>
+
 如下：<br>
 </p>
 <pre>
