PinePhone How to build kernel 6.1.12.

--- a/phone.htm
+++ b/phone.htm
@@ -2323,6 +2323,10 @@ build tow-boot</a><br>
   <a href="phone/pinephone/mobian_install.htm">
   安裝系統</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="phone/pinephone/mobian_build_kernel.htm">
+  build kernel 6.1.12</a><br>
+
 &oplus;
 <b>Kali Linux</b><br>
   &emsp;&emsp;&lowast;
