--- a/phone/pinephone/mobian_build_kernel.htm
+++ b/phone/pinephone/mobian_build_kernel.htm
@@ -55,7 +55,7 @@
 步驟如下：<br>
 </p>
 <pre>
-$ sudo apt-get install gcc-aarch64*
+$ sudo apt-get install gcc-aarch64* git-buildpackage
 
 $ cd
 $ git clone https://salsa.debian.org/Mobian-team/devices/kernels/sunxi64-linux.git pinephone-linux
@@ -67,7 +67,7 @@ $ ls -al ../linux-image-6.1.12-00171-gcf1b69217f8a_6.1.12-00171-gcf1b69217f8a-1_
     -rw-r--r-- 1 steward steward 33816824 Feb 24 00:12 ../linux-image-6.1.12-00171-gcf1b69217f8a_6.1.12-00171-gcf1b69217f8a-1_arm64.deb
 </pre>
 <p>
-P.S. 進入mobian系統後，安裝linux-image-6.1.12-00171-gcf1b69217f8a_6.1.12-00171-gcf1b69217f8a-1_arm64.deb，系統會自動更新/boot/extlinux/extlinux.conf的開機選單
+P.S. 進入mobian系統後，安裝linux-image-6.1.12-00171-gcf1b69217f8a_6.1.12-00171-gcf1b69217f8a-1_arm64.deb，系統會自動更新/boot/extlinux/extlinux.conf的開機選單，另外，arch/arm64/boot/Image.gz就是vmlinuz檔案
 </p>
 
 <p>
