PinePhone How to install XFCE4.

--- a/phone.htm
+++ b/phone.htm
@@ -2324,6 +2324,10 @@ build tow-boot</a><br>
   安裝系統</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="phone/pinephone/mobian_xfce4.htm">
+  安裝XFCE4</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="phone/pinephone/mobian_build_kernel.htm">
   build kernel 6.1.12</a><br>
 
