--- a/index.htm
+++ b/index.htm
@@ -45,36 +45,36 @@
 <div id="content">
 <script type="text/javascript" src="header.js"></script>
 <ul id="menu" class="four">
-  <li><a href="handheld.htm">
-  <span class="big">掌</span>機</a></li>
-  <li><a href="phone.htm">
-  <span class="big">手</span>機</a></li>
-  <li><a href="system.htm">
-  <span class="big">系</span>統</a></li>
-  <li><a href="compiler.htm">
-  <span class="big">編</span>譯器</a></li>
-  <li><a href="emu.htm">
-  <span class="big">模</span>擬器</a></li>
-  <li><a href="umpc.htm">
-  <span class="big">微</span>電腦</a></li>
-  <li><a href="mcu.htm">
-  <span class="big">微</span>處理器</a></li>
-  <li><a href="program.htm">
-  <span class="big">程</span>式設計</a></li>
-  <li><a href="driver.htm">
-  <span class="big">驅</span>動程式</a></li>
-  <li><a href="picture.htm">
-  <span class="big">繪</span>圖相關</a></li>
-  <li><a href="reverse.htm">
-  <span class="big">逆</span>向工程</a></li>
-  <li><a href="index.htm" class="here">
-  <span class="big">旅</span>遊雜記</a></li>
+    <li><a href="handheld.htm">
+    <span class="big">掌</span>機</a></li>
+    <li><a href="phone.htm">
+    <span class="big">手</span>機</a></li>
+    <li><a href="system.htm">
+    <span class="big">系</span>統</a></li>
+    <li><a href="compiler.htm">
+    <span class="big">編</span>譯器</a></li>
+    <li><a href="emu.htm">
+    <span class="big">模</span>擬器</a></li>
+    <li><a href="umpc.htm">
+    <span class="big">微</span>電腦</a></li>
+    <li><a href="mcu.htm">
+    <span class="big">微</span>處理器</a></li>
+    <li><a href="program.htm">
+    <span class="big">程</span>式設計</a></li>
+    <li><a href="driver.htm">
+    <span class="big">驅</span>動程式</a></li>
+    <li><a href="picture.htm">
+    <span class="big">繪</span>圖相關</a></li>
+    <li><a href="reverse.htm">
+    <span class="big">逆</span>向工程</a></li>
+    <li><a href="index.htm" class="here">
+    <span class="big">旅</span>遊雜記</a></li>
 </ul>
 
 <div id="page">
 <br><br>
 <p>
-  <a href="#italy"><img src="img/photos/italy.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="義大利"/></a>
+    <a href="#italy"><img src="img/photos/italy.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="義大利"/></a>
 </p>
 </div>
 
@@ -86,24 +86,24 @@
 義大利</h3>
 <hr size="1"><br><br><br><br><br>
 
-  &oplus;
-  2023-01<br>
+    &oplus;
+    2023-01<br>
 
-    &emsp;&emsp;&lowast;
-    <a href="trip/italy/rome.htm">
-    羅馬</a><br>
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="trip/italy/rome.htm">
+        羅馬</a><br>
 
-    &emsp;&emsp;&lowast;
-    <a href="trip/italy/firenze.htm">
-    佛羅倫斯</a><br>
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="trip/italy/firenze.htm">
+        佛羅倫斯</a><br>
 
-    &emsp;&emsp;&lowast;
-    <a href="trip/italy/venezia.htm">
-    威尼斯</a><br>
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="trip/italy/venezia.htm">
+        威尼斯</a><br>
 
-    &emsp;&emsp;&lowast;
-    <a href="trip/italy/milano.htm">
-    米蘭</a><br>
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="trip/italy/milano.htm">
+        米蘭</a><br>
 <br><br><br><br>
 </p>
 
