--- a/picture.htm
+++ b/picture.htm
@@ -45,44 +45,44 @@
 <div id="content">
 <script type="text/javascript" src="header.js"></script>
 <ul id="menu" class="four">
-  <li><a href="handheld.htm">
-  <span class="big">掌</span>機</a></li>
-  <li><a href="phone.htm">
-  <span class="big">手</span>機</a></li>
-  <li><a href="system.htm">
-  <span class="big">系</span>統</a></li>
-  <li><a href="compiler.htm">
-  <span class="big">編</span>譯器</a></li>
-  <li><a href="emu.htm">
-  <span class="big">模</span>擬器</a></li>
-  <li><a href="umpc.htm">
-  <span class="big">微</span>電腦</a></li>
-  <li><a href="mcu.htm">
-  <span class="big">微</span>處理器</a></li>
-  <li><a href="program.htm">
-  <span class="big">程</span>式設計</a></li>
-  <li><a href="driver.htm">
-  <span class="big">驅</span>動程式</a></li>
-  <li><a href="picture.htm" class="here">
-  <span class="big">繪</span>圖相關</a></li>
-  <li><a href="reverse.htm">
-  <span class="big">逆</span>向工程</a></li>
-  <li><a href="index.htm">
-  <span class="big">旅</span>遊雜記</a></li>
+    <li><a href="handheld.htm">
+    <span class="big">掌</span>機</a></li>
+    <li><a href="phone.htm">
+    <span class="big">手</span>機</a></li>
+    <li><a href="system.htm">
+    <span class="big">系</span>統</a></li>
+    <li><a href="compiler.htm">
+    <span class="big">編</span>譯器</a></li>
+    <li><a href="emu.htm">
+    <span class="big">模</span>擬器</a></li>
+    <li><a href="umpc.htm">
+    <span class="big">微</span>電腦</a></li>
+    <li><a href="mcu.htm">
+    <span class="big">微</span>處理器</a></li>
+    <li><a href="program.htm">
+    <span class="big">程</span>式設計</a></li>
+    <li><a href="driver.htm">
+    <span class="big">驅</span>動程式</a></li>
+    <li><a href="picture.htm" class="here">
+    <span class="big">繪</span>圖相關</a></li>
+    <li><a href="reverse.htm">
+    <span class="big">逆</span>向工程</a></li>
+    <li><a href="index.htm">
+    <span class="big">旅</span>遊雜記</a></li>
 </ul>
 
 <div id="page">
 <br><br>
 <p>
-  <a href="#openscad"><img src="img/photos/openscad.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="OpenSCAD"/></a>
-  <a href="#kicad"><img src="img/photos/kicad.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="KiCAD"/></a>
-  <a href="#fritzing"><img src="img/photos/fritzing.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Fritzing"/></a>
-  <a href="#gimp"><img src="img/photos/gimp.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GIMP"/></a>
-  <a href="#cnc1610pro"><img src="img/photos/cnc1610pro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CNC1610 Pro"/></a>
-  <a href="#cr7"><img src="img/photos/cr7.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CR-7 3D印表機"/></a>
-  <a href="#mini-kossel"><img src="img/photos/mini-kossel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Mini Kossel 3D印表機"/></a>
-  <a href="#m3d"><img src="img/photos/m3d.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Micro 3D印表機"/></a>
-  <a href="#davinci-mini"><img src="img/photos/davinci-mini.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="da Vinci Mini 3D印表機"/></a>
+    <a href="#openscad"><img src="img/photos/openscad.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="OpenSCAD"/></a>
+    <a href="#kicad"><img src="img/photos/kicad.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="KiCAD"/></a>
+    <a href="#fritzing"><img src="img/photos/fritzing.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Fritzing"/></a>
+    <a href="#gimp"><img src="img/photos/gimp.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GIMP"/></a>
+    <a href="#cnc1610pro"><img src="img/photos/cnc1610pro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CNC1610 Pro"/></a>
+    <a href="#cr7"><img src="img/photos/cr7.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CR-7 3D印表機"/></a>
+    <a href="#mini-kossel"><img src="img/photos/mini-kossel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Mini Kossel 3D印表機"/></a>
+    <a href="#m3d"><img src="img/photos/m3d.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Micro 3D印表機"/></a>
+    <a href="#davinci-mini"><img src="img/photos/davinci-mini.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="da Vinci Mini 3D印表機"/></a>
 </p>
 </div>
 
@@ -109,17 +109,17 @@ cheatsheet</a><br>
 &oplus;
 <b>3D物件</b><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/openscad/cube.htm">
-  cube</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/cube.htm">
+    cube</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/openscad/sphere.htm">
-  sphere</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/sphere.htm">
+    sphere</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/openscad/cylinder.htm">
-  cylinder</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/cylinder.htm">
+    cylinder</a><br>
 <br><br><br><br>
 
 <div id="kicad"></div>
@@ -142,79 +142,79 @@ KiCAD</h3>
 &oplus;
 LED練習電路<br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/led/sch.htm">
-  Schematic</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/led/sch.htm">
+    Schematic</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/led/net.htm">
-  Netlist</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/led/net.htm">
+    Netlist</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/led/cvpcb.htm">
-  CvPCB</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/led/cvpcb.htm">
+    CvPCB</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/led/pcb.htm">
-  PCB</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/led/pcb.htm">
+    PCB</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/led/gerber.htm">
-  Gerber</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/led/gerber.htm">
+    Gerber</a><br>
 
 &oplus;
 Schematic<br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/schematic/library.htm">
-  新增元件</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/schematic/library.htm">
+    新增元件</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/schematic/copy_block.htm">
-  Copy Block</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/schematic/copy_block.htm">
+    Copy Block</a><br>
 
 &oplus;
 Footprint<br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/footprint/library.htm">
-  新增元件</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/footprint/library.htm">
+    新增元件</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/footprint/via_size.htm">
-  修改via尺寸</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/footprint/via_size.htm">
+    修改via尺寸</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/footprint/copy_block.htm">
-  Copy Block</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/footprint/copy_block.htm">
+    Copy Block</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/footprint/fill_zone.htm">
-  如何填充區域(Fill Zone)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/footprint/fill_zone.htm">
+    如何填充區域(Fill Zone)</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/footprint/autorouting.htm">
-  如何自動佈線(Autorouting)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/footprint/autorouting.htm">
+    如何自動佈線(Autorouting)</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/footprint/bmp2mod.htm">
-  如何把BMP轉成Footprint元件</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/footprint/bmp2mod.htm">
+    如何把BMP轉成Footprint元件</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/footprint/svg2mod.htm">
-  如何把SVG轉成Footprint元件</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/footprint/svg2mod.htm">
+    如何把SVG轉成Footprint元件</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/footprint/fix_type_error4.htm">
-  解決TypeErr(4) Track near pad的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/footprint/fix_type_error4.htm">
+    解決TypeErr(4) Track near pad的問題</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/footprint/fix_import_mod.htm">
-  解決Import *.picture/kicad/mod錯誤的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/footprint/fix_import_mod.htm">
+    解決Import *.picture/kicad/mod錯誤的問題</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/kicad/footprint/fix_copper_area.htm">
-  解決Copper area inside copper area錯誤的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/kicad/footprint/fix_copper_area.htm">
+    解決Copper area inside copper area錯誤的問題</a><br>
 <br><br><br><br>
 
 <div id="fritzing"></div>
@@ -297,65 +297,65 @@ Mini Kossel 3D印表機</h3>
 &oplus;
 <b>RAMPS 1.4</b><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/z_manual.htm">
-  最簡單的手動調平步驟</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/z_manual.htm">
+    最簡單的手動調平步驟</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/remove_nozzle.htm">
-  如何拔掉噴嘴</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/remove_nozzle.htm">
+    如何拔掉噴嘴</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/heatbed.htm">
-  如何驅動加熱板</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/heatbed.htm">
+    如何驅動加熱板</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/clean_block.htm">
-  如何清除噴嘴堵住</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/clean_block.htm">
+    如何清除噴嘴堵住</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/temp.htm">
-  如何加快加熱速度</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/temp.htm">
+    如何加快加熱速度</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/erase_eeprom.htm">
-  如何清除EEPROM資料</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/erase_eeprom.htm">
+    如何清除EEPROM資料</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/high_precise.htm">
-  如何印出超高精度的物件</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/high_precise.htm">
+    如何印出超高精度的物件</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/fix_material.htm">
-  如何解決出料不足的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/fix_material.htm">
+    如何解決出料不足的問題</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/end_g28.htm">
-  如何在列印結束後執行G28</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/end_g28.htm">
+    如何在列印結束後執行G28</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/circle.htm">
-  如何讓圓圈可以列印更完美</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/circle.htm">
+    如何讓圓圈可以列印更完美</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/retract.htm">
-  為何抽線容易斷</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/retract.htm">
+    為何抽線容易斷</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/line.htm">
-  為何出料會斷斷續續</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/line.htm">
+    為何出料會斷斷續續</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/e0_motor.htm">
-  為何無發轉動送料馬達</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/e0_motor.htm">
+    為何無發轉動送料馬達</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/abs.htm">
-  為何變成梯形的結果(正方形的圖)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/abs.htm">
+    為何變成梯形的結果(正方形的圖)</a><br>
 
-  &emsp;&emsp;&lowast;
-  <a href="picture/mini-kossel/ramps-1.4/burn.htm">
-  為何列印出來的PLA會有燒焦的現象</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/mini-kossel/ramps-1.4/burn.htm">
+    為何列印出來的PLA會有燒焦的現象</a><br>
 <br><br><br><br>
 
 <div id="m3d"></div>
