CNC1610 Pro How to set Z offset.

--- a/picture.htm
+++ b/picture.htm
@@ -253,6 +253,10 @@ CNC1610 Pro</h3>
 &lowast;
 <a href="picture/cnc1610pro/wall.htm">
 自製擋板</a><br>
+
+&lowast;
+<a href="picture/cnc1610pro/bestz.htm">
+如何找出最佳的Z軸位置</a><br>
 <br><br><br><br>
 
 <div id="cr7"></div>
