CNC1610 Pro How to use flatcam to translate gerbe file into g-code file.

--- a/picture.htm
+++ b/picture.htm
@@ -257,6 +257,10 @@ CNC1610 Pro</h3>
 &lowast;
 <a href="picture/cnc1610pro/bestz.htm">
 如何找出最佳的Z軸位置</a><br>
+
+&lowast;
+<a href="picture/cnc1610pro/flatcam.htm">
+使用FlatCAM將Gerber轉成CNC G-Code</a><br>
 <br><br><br><br>
 
 <div id="cr7"></div>
