Wine How to use edit control.

--- a/program.htm
+++ b/program.htm
@@ -540,6 +540,10 @@ Wine</h3>
                     <a href="program/wine/cpp_dlg_button.htm">
                     Button</a><br>
                 
+                    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+                    <a href="program/wine/cpp_dlg_edit.htm">
+                    Edit</a><br>
+                
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
                 Common Dialog<br>
 
