GNU Refined code.

--- a/program/gnu/cpp_getprivateprofilestring.htm
+++ b/program/gnu/cpp_getprivateprofilestring.htm
@@ -104,7 +104,7 @@ int GetPrivateProfileString(const char *title, const char *key, char *retbuf,
     return -1;
 }
 
-int main(int argc, char *argv[])
+int main(int argc, char **argv)
 {
     char buffer[255] = {0};
 
