--- a/program/gnu/cpp_scandir.htm
+++ b/program/gnu/cpp_scandir.htm
@@ -51,14 +51,8 @@
 參考資訊<br>
 1. <a href="https://man7.org/linux/man-pages/man3/scandir.3.html">man</a><br><br>
 
-相較於readdir()，scandir()提供排序功能，使用者可以使用alphasort或者自定義的排序callback
-</p>
-<table>
-<tr><th>API</th></tr>
-<tr><td>int scandir(const char *dirp, struct dirent ***namelist, int (*filter)(const struct dirent*), int (*compar)(const struct dirent**, const struct dirent**));</td></tr>
-</table><br>
+相較於readdir()，scandir()提供排序功能，使用者可以使用alphasort或者自定義的排序callback<br><br>
 
-<p>
 main.c
 </p>
 <pre class="brush:cpp">
@@ -85,19 +79,6 @@ int main(int argc, char **argv)
     free(namelist);
     return 0;
 }
-</pre><br>
-
-<p>
-編譯、執行
-</p>
-<pre>
-$ gcc main.c -o main
-$ ./main
-    .
-    ..
-    .ICE-unix
-    .org.chromium.Chromium.vTHjid
-    test
 </pre><br>
 
 <p>
