--- a/program/gnu/cpp_signal.htm
+++ b/program/gnu/cpp_signal.htm
@@ -48,7 +48,7 @@
 <p><b>signal</b></p>
 <hr size="1">
 <p>
-system signal
+Signal：
 </p>
 <table>
   <tr><th>Number</th><th>Name</th><th>Function</th></tr>
