Wine Refined code.

--- a/program/wine/cpp_dlg_bitblt.htm
+++ b/program/wine/cpp_dlg_bitblt.htm
@@ -54,6 +54,8 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
+使用CreateDC()、CreateCompatibleDC()產生出來的DC並沒有Buffer可以用來畫圖，因此，記得使用CreateBitmap()、CreateCompatibleBitmap()產生Buffer<br><br>
+
 main.c
 </p>
 <pre class="brush:cpp">
