--- a/program/wine/cpp_dlg_brush.htm
+++ b/program/wine/cpp_dlg_brush.htm
@@ -53,19 +53,8 @@
 2. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 3. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-當視窗元件需要重畫時，系統會透過發送WM_PAINT事件，讓callback進行處理，因此，可以在收到WM_PAINT事件時，繪製相關的圖像或者文字，而關於顏色設定方面，可以分成Brush和Pen兩種設定，Brush代表填入的顏色，Pen則是線條的顏色。<br><br>
+當視窗需要重畫時，系統會透過發送WM_PAINT事件，讓callback進行處理，因此，可以在收到WM_PAINT事件時，繪製相關的圖像或者文字，而關於畫圖設定方面，可以分成Brush和Pen兩種設定，Brush代表填入的顏色，Pen則是線條的顏色<br><br>
 
-說明：
-</p>
-<table>
-<tr><th>API</th></tr>
-<tr><td>HDC BeginPaint(HWND hwnd, LPPAINTSTRUCT lpPaint);</td></tr>
-<tr><td>HBRUSH CreateSolidBrush(COLORREF crColor);</td></tr>
-<tr><td>int FillRect(HDC hDC, CONST RECT *lprc, HBRUSH hbr);</td></tr>
-<tr><td>BOOL EndPaint(HWND hWnd, CONST PAINTSTRUCT *lpPaint);</td></tr>
-</table><br>
-
-<p>
 main.c
 </p>
 <pre class="brush:cpp">
