--- a/program/wine/cpp_dlg_window.htm
+++ b/program/wine/cpp_dlg_window.htm
@@ -55,16 +55,8 @@
 4. <a href="https://learn.microsoft.com/en-us/windows/win32/winmsg/window-styles">window-styles</a><br>
 5. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-Windows的視窗可以分成：<b>Dialog</b>、Single Document Interface(<b>SDI</b>)、Multiple Document Interface(<b>MDI</b>)三種類別，相對於SDI、MDI，Dialog類別是比較容易上手學習的一個類別，相當適合初次學習Windows視窗設計的使用者，而Windows視窗程式設計的核心就是圍繞着事件處理(處理Message)，任何的視窗設定或者溝通都是以事件導向為原則，因此，寫出一個簡單的視窗框架，將有助於了解Windows視窗程式的運作，如下列表是此次範例使用到的Win32 API：
-</p>
-<table>
-<tr><th>API</th></tr>
-<tr><td>HWND CreateWindow(LPCTSTR lpClassName, LPCTSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HANDLE hInstance, LPVOID lpParam);</td></tr>
-<tr><td>BOOL GetMessage(LPMSG lpMsg, HWND hWnd, UINT wMsgFilterMin, UINT wMsgFilterMax);</td></tr>
-<tr><td>LRESULT DispatchMessage(const MSG *lpMsg);</td></tr>
-</table><br>
+Windows的視窗可以分成：<b>Dialog</b>、Single Document Interface(<b>SDI</b>)、Multiple Document Interface(<b>MDI</b>)三種類別，相對於SDI、MDI，Dialog類別是比較容易上手學習的一個類別，相當適合初次學習Windows視窗設計的使用者，而Windows視窗程式設計的核心就是圍繞着事件處理(處理Message)，任何的視窗設定或者溝通都是以事件導向為原則，因此，寫出一個簡單的視窗框架，將有助於了解Windows視窗程式的運作<br><br>
 
-<p>
 main.c
 </p>
 <pre class="brush:cpp">
