--- a/program/wine/cpp_dlg_event.htm
+++ b/program/wine/cpp_dlg_event.htm
@@ -53,19 +53,8 @@
 2. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 3. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-一般在建立Windows視窗時，會註冊自定義的Class並且設定事件處理的副程式(callback)，不過，目前範例使用的Class是系統預設的WC_DIALOG，因此，可以透過SetWindowLongPtr()設定callback，這種替換callback的行為就稱為Subclass，意指為原本Class的Subclass，所以Subclass後，需要將原先callback的位址(SetWindowLongPtr()的回傳值)保存下來，然後透過呼叫CallWindowProc()(傳入原先callback的位址)，用來將處理控制權移交回原先視窗元件，所以當有多層Subclass的情形發生時，每次在處理事件時，記得判斷對應的Handle，如：在處理關閉事件時(WM_CLOSE)，會先判斷目前的hWnd是否為當前的視窗hWnd，如果是當前視窗hWnd，才進行關閉的動作，避免關閉到其它視窗元件。<br><br>
+一般在建立Windows視窗時，會註冊自定義的Class並且設定事件處理的副程式(callback)，不過，目前範例使用的Class是系統預設的WC_DIALOG，因此，可以透過SetWindowLongPtr()設定callback，這種替換callback的行為就稱為Subclass，意指為原本Class的Subclass，所以Subclass後，需要將原先callback的位址(SetWindowLongPtr()的回傳值)保存下來，然後透過呼叫CallWindowProc()(傳入原先callback的位址)，用來將處理控制權移交回原先視窗元件，所以當有多層Subclass的情形發生時，每次在處理事件時，記得判斷對應的Handle，如：在處理關閉事件時(WM_CLOSE)，會先判斷目前的hWnd是否為當前的視窗hWnd，如果是當前視窗hWnd，才進行關閉的動作，避免關閉到其它視窗元件<br><br>
 
-說明：
-</p>
-<table>
-<tr><th>API</th></tr>
-<tr><td>VOID PostQuitMessage(int nExitCode);</td></tr>
-<tr><td>LRESULT CallWindowProc(WNDPROC lpPrevWndFunc, HWND hWnd, UINT Msg, WPARAM wParam, LPARAM lParam);</td></tr>
-<tr><td>LONG_PTR SetWindowLongPtr(HWND hWnd, int nIndex, LONG_PTR dwNewLong);</td></tr>
-<tr><td>BOOL ShowWindow(HWND hWnd, int nCmdShow);</td></tr>
-</table><br>
-
-<p>
 main.c
 </p>
 <pre class="brush:cpp">
@@ -105,12 +94,12 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
 }
 </pre>
 <p>
-<b>Line 9 ~ 11</b>：處理關閉事件(WM_CLOSE)<br>，值得注意的地方是，SendMessage()是屬於Block方式呼叫(必須等待動作執行完畢才返回)，而PostQuitMessage()則是Non-block方式呼叫<br>
-<b>Line 13</b>：將處理控制權移交給下一個視窗元件</br>
-<b>Line 18 ~ 19</b>：保存當前視窗的hWnd<br>
-<b>Line 20 ~ 21</b>：設定當前視窗的callback<br>
-<b>Line 22</b>：由於沒有設定WS_VISIBLE，因此，透過ShowWindow()讓當前視窗可視化<br>
-<b>Line 25 ~ 27</b>：提取並且分發事件(Message)<br><br>
+<b>Line 9 ~ 14</b>：關閉視窗的順序為：主視窗收到WM_CLOSE事件時，呼叫DestroyWindow()，DestroyWindow()會自動將子視窗的相關資源也一併釋放掉(包含Resource描述的資源)，系統接著會發送WM_DESTROY事件給主視窗，待主視窗收到WM_DESTROY事件時，呼叫PostQuitMessage()結束視窗，值得注意的地方是，SendMessage()是屬於Block方式呼叫(必須等待動作執行完畢才返回)，而PostQuitMessage()則是Non-block方式呼叫<br>
+<b>Line 16</b>：將處理控制權移交給下一個視窗元件</br>
+<b>Line 22 ~ 23</b>：保存當前視窗的hWnd<br>
+<b>Line 24 ~ 25</b>：設定當前視窗的callback<br>
+<b>Line 26</b>：由於沒有設定WS_VISIBLE，因此，透過ShowWindow()讓當前視窗可視化<br>
+<b>Line 28 ~ 31</b>：提取並且分發事件(Message)<br><br>
 
 編譯、執行
 </p>
