Wine Refined code.

--- a/program/wine/cpp_dlg_edit.htm
+++ b/program/wine/cpp_dlg_edit.htm
@@ -126,7 +126,9 @@ $ winegcc main.c -o main -lgdi32
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_edit/1.jpg" class="maxSize"><br>
+<img style="border:0px" src="cpp_dlg_edit/1.jpg" class="maxSize"><br><br>
+
+按下Enter鍵就會顯示目前Edit的內容<br>
 <img style="border:0px" src="cpp_dlg_edit/2.jpg" class="maxSize">
 </p>
 
